fixed error messages on adding to cart; fixed +91 disp error in browsers; changed login disp error; fixed + alignment; fixed delivery address edit spacing mistake; fixed cart overflow of space mistake

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -555,11 +555,11 @@ footer {
       }
     }
     tr.active {
-      background-color: rgba(219,233,255,1);
-      td {
-        i.fa { color: $success-green; }
-        background-color: transparent;
+      &:hover > td {
+        background-color: rgba(212,243,200,1);
       }
+      background-color: rgba(212,243,208,1);
+      td { background-color: transparent; }
     }
   }
 }
@@ -571,11 +571,15 @@ footer {
   .user-phone-wrapper {
     margin-bottom: 10px;
     i { padding: 13px; }
-    .user-phone-prefix { width:30px; }
+    .user-phone-prefix { width:40px; text-align: center; }
     .user-phone, .user-phone-prefix {
       background-color: transparent;
       border: none;
       border-bottom: 1px solid rgba(0,0,0,0.1);
+    }
+    .user-phone {
+      width: 100px;
+      text-align: center;
     }
   }
 }
@@ -584,7 +588,7 @@ footer {
   text-align: center;
   .promo-code-wrapper {
     text-align: left;
-    width: 300px;
+    max-width: 300px;
     margin: 20px;
     display: inline-block;
   }
@@ -633,6 +637,10 @@ footer {
 }
 
 .thumbnail.combo-card {
+  &:hover {
+    opacity:0.7;
+    cursor: pointer;
+  }
   position: relative;
   -webkit-box-shadow: 0 1px 7px 1px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 7px 1px rgba(0, 0, 0, 0.1);
@@ -710,35 +718,12 @@ footer {
       border-bottom-left-radius: 4px;
       pointer-events: none;
       @include black-fading-overlay-bg;
-      .bottom-bar {
-        pointer-events: all;
-        position: absolute;
-        z-index: 1;
-        bottom: 0;
-        width: 100%;
-        padding: 15px;
-        .combo-name {
-          padding-left: 5px;
-          padding-right: 5px;
-          color: white;
-          margin-right: 70px;
-          font-size: 18px;
-        }
-        .quantity-counter-wrapper {
+      .quantity-counter-wrapper {
+          pointer-events: all;
           position: absolute;
-          padding: inherit;
-          right: 0;
-          top: 0;
-          bottom: 0;
-          height: 100%;
-          padding-bottom: 20px !important;
+          right: 15px;
+          bottom: 15px;
           .quantity-counter {
-            position: relative;
-            top: 50%;
-            -webkit-transform: translateY(-50%);
-            -moz-transform: translateY(-50%);
-            -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
             > * { display: inline-block; vertical-align: middle; }
             font-size: 13px;
             .quantity {
@@ -754,6 +739,19 @@ footer {
               transform: translate(-6px,-7px);
             }
           }
+        }
+      .bottom-bar {
+        position: absolute;
+        z-index: 1;
+        bottom: 0;
+        width: 100%;
+        padding: 15px;
+        .combo-name {
+          padding-left: 5px;
+          padding-right: 5px;
+          color: white;
+          margin-right: 70px;
+          font-size: 18px;
         }
       }
     }
@@ -936,6 +934,7 @@ footer {
     }
   }
 }
+@media(max-width:500px) { .order-description { padding: 10px !important; } }
 @media(max-width:767px) { .order-history { padding: 0; } }
 /*CSS for order history*/
 
@@ -1260,11 +1259,15 @@ footer {
 .user-info {
   div {
     i { padding: 13px; margin-right: 10px; }
-    .user-phone-prefix { width:30px; }
+    .user-phone-prefix { width:40px; text-align: center; }
     input {
       background-color: transparent;
       border: none;
       border-bottom: 1px solid rgba(0,0,0,0.1);
+    }
+    .user-phone {
+      width: 100px;
+      text-align: center;
     }
   }
   > *:last-child { margin-bottom: 20px; }
@@ -1292,9 +1295,11 @@ footer {
       }
     }
     tr.active {
-      background-color: rgba(219,233,255,1);
+      &:hover > td {
+        background-color: rgba(212,243,200,1);
+      }
+      background-color: rgba(212,243,208,1);
       td {
-        i.fa { color: $success-green; }
         background-color: transparent;
       }
     }
@@ -1303,7 +1308,7 @@ footer {
 /*CSS for profile ends*/
 
 /*Signin and Register*/
-input.is-phone { width: calc(100% - 40px) !important; }
+input.is-phone { width: calc(100% - 45px) !important; }
 .btn-login, .btn-register { padding: 10px 40px; font-size: 17px; }
 .login-checkbox, .register-checkbox { padding: 10px 0; }
 .login-wrapper, .register-wrapper {
@@ -1678,6 +1683,21 @@ input.is-phone { width: calc(100% - 40px) !important; }
           border-bottom-right-radius: 4px;
           border-bottom-left-radius: 4px;
           @include black-fading-overlay-bg;
+          .quantity-counter-wrapper {
+              position: absolute;
+              right: 15px;
+              bottom: 15px;
+              .quantity-counter {
+                > * { display: inline-block; vertical-align: middle; }
+                font-size: 13px;
+                .quantity {
+                  color: white;
+                  font-size: 17px;
+                  padding-left: 5px;
+                  padding-right: 5px;
+                }
+              }
+            }
           .bottom-bar {
             position: absolute;
             bottom: 0;
@@ -1693,31 +1713,6 @@ input.is-phone { width: calc(100% - 40px) !important; }
               color: white;
               margin-right: 70px;
               font-size: 18px;
-            }
-            .quantity-counter-wrapper {
-              position: absolute;
-              padding: inherit;
-              right: 0;
-              top: 0;
-              bottom: 0;
-              height: 100%;
-              padding-bottom: 20px !important;
-              .quantity-counter {
-                position: relative;
-                top: 50%;
-                -webkit-transform: translateY(-50%);
-                -moz-transform: translateY(-50%);
-                -ms-transform: translateY(-50%);
-                transform: translateY(-50%);
-                > * { display: inline-block; vertical-align: middle; }
-                font-size: 13px;
-                .quantity {
-                  color: white;
-                  font-size: 17px;
-                  padding-left: 5px;
-                  padding-right: 5px;
-                }
-              }
             }
           }
         }
